--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Slippy - Your AI-Powered IDE</title>
-    <script src="js/startup.js"></script>
-    <script src="js/debug.js"></script>
+    <script src="../js/startup.js"></script>
+    <script src="../js/debug.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.13/codemirror.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.13/codemirror.min.js"></script>
@@ -37,18 +37,18 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/js-beautify/1.14.7/beautify.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/js-beautify/1.14.7/beautify-html.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/js-beautify/1.14.7/beautify-css.min.js"></script>
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/codeeditor.css">
-    <link rel="stylesheet" href="css/editor.css">
-    <link rel="stylesheet" href="css/console.css">
-    <link rel="stylesheet" href="css/themes/dark.css" id="theme-stylesheet">
+    <link rel="stylesheet" href="../css/normalize.css">
+    <link rel="stylesheet" href="../css/codeeditor.css">
+    <link rel="stylesheet" href="../css/editor.css">
+    <link rel="stylesheet" href="../css/console.css">
+    <link rel="stylesheet" href="../css/themes/dark.css" id="theme-stylesheet">
     <link rel="shortcut icon" href="favicon.ico">
-    <script src="js/editor-transition.js"></script>
+    <script src="/js/editor-transition.js"></script>
 </head>
 <body class="dark-theme">
     <header>
         <div class="logo">
-            <img src="assets/icons/ai.png" alt="CodeAI Logo" class="logo-icon">
+            <img src="../assets/icons/ai.png" alt="CodeAI Logo" class="logo-icon">
             <h1>Slippy - Your new AI Assistant</h1>
         </div>
         <nav>
@@ -60,7 +60,7 @@
 </button>
 
 <button id="save-button" class="btn" data-tooltip="Save Code (Ctrl+S)">
-  <img src="assets/icons/save.svg" alt="Save" class="icon">
+  <img src="../assets/icons/save.svg" alt="Save" class="icon">
   Save
 </button>
 
@@ -71,7 +71,7 @@
 </button>
 
 <button id="settings-button" class="btn" data-tooltip="Settings">
-  <img src="assets/icons/settings.svg" alt="Settings" class="icon">
+  <img src="../assets/icons/settings.svg" alt="Settings" class="icon">
 </button>
         </nav>
     </header>
@@ -187,15 +187,15 @@
     </div>
 
 
-    <script src="js/editor.js"></script>
-    <script src="js/console.js"></script>
-    <script src="js/file-manager.js"></script>
-    <script src="js/config.js"></script>
-    <script src="js/GroqClient.js"></script>
-    <script src="js/ai-assistant.js"></script>
-    <script src="js/themes.js"></script>
-    <script src="js/preview.js"></script>
-    <script src="js/app.js"></script>
+    <script src="../js/editor.js"></script>
+    <script src="../js/console.js"></script>
+    <script src="../js/file-manager.js"></script>
+    <script src="../js/config.js"></script>
+    <script src="../js/GroqClient.js"></script>
+    <script src="../js/ai-assistant.js"></script>
+    <script src="../js/themes.js"></script>
+    <script src="../js/preview.js"></script>
+    <script src="../js/app.js"></script>
 
     <script>
     window.addEventListener('error', function(e) {
