--- a/public/landingpage.html
+++ b/public/landingpage.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Slippy - Your AI-Powered IDE</title>
-    <link rel="stylesheet" href="css/landingpage.css">
-    <link rel="stylesheet" href="css/navbar.css">
+    <link rel="stylesheet" href="/css/landingpage.css">
+    <link rel="stylesheet" href="/css/navbar.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="shortcut icon" href="favicon.ico">
     <meta name="description" content="Slippy is an AI-powered code editor that helps you write, edit, and debug code faster with real-time assistance.">
@@ -16,7 +16,7 @@
         <nav class="navbar">
             <div class="container">
                  <a href="landingpage.html" class="logo">
-                 <img src="assets/icons/ai.png" alt="Slippy Logo" class="logo-icon">
+                 <img src="/assets/icons/ai.png" alt="Slippy Logo" class="logo-icon">
                  <span>Slippy - Your AI-Powered IDE</span>
             </a>
 
@@ -45,7 +45,7 @@
                 </div>
             </div>
             <div class="hero-image">
-                <img src="assets/icons/heropicture.png" alt="Slippy Code Editor Interface" class="editor-preview">
+                <img src="/assets/icons/heropicture.png" alt="Slippy Code Editor Interface" class="editor-preview">
             </div>
         </div>
     </header>
@@ -199,7 +199,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-logo">
-                    <img src="assets/icons/ai.png" alt="Slippy Logo" class="logo-icon">
+                    <img src="../assets/icons/ai.png" alt="Slippy Logo" class="logo-icon">
                     <h2>Slippy</h2>
                 </div>
                 <div class="footer-links">
@@ -211,7 +211,7 @@
                     </div>
                     <div class="link-group">
                         <h3>Resources</h3>
-                        <a href="assets/media/documentation.pdf" target="_blank">Documentation</a>
+                        <a href="/assets/media/documentation.pdf" target="_blank">Documentation</a>
                     </div>
                     <div class="link-group">
                         <h3>Connect</h3>
@@ -247,10 +247,10 @@
         });
     </script>
 
-    <script src="js/landingpage.js"></script>
-    <script src="js/navbar.js"></script>
-    <script src="js/terminal-loader.js"></script>
-    <script src="js/landing-transition.js"></script>
+    <script src="/js/landingpage.js"></script>
+    <script src="/js/navbar.js"></script>
+    <script src="/js/terminal-loader.js"></script>
+    <script src="/js/landing-transition.js"></script>
 
 
 </body>
